objects/Child__c.object
<CustomObject>
    <fields>
        <fullName>ChildMD__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child1s</relationshipLabel>
        <relationshipName>Child1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>Child1s</relationshipLabel>
        <relationshipName>Child1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sibling_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sibling 1</label>
        <referenceTo>Grand_Sibling_1__c</referenceTo>
        <relationshipLabel>Child1s</relationshipLabel>
        <relationshipName>Child1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sibling_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sibling 2</label>
        <referenceTo>Grand_Sibling_2__c</referenceTo>
        <relationshipLabel>Child1s</relationshipLabel>
        <relationshipName>Child1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextTest__c</fullName>
        <description>Populated by a WF</description>
        <label>TextTest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Child1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C1{0000}</displayFormat>
        <label>Children Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChildVal</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TextTest__c)</errorConditionFormula>
        <errorMessage>Text test must have a value</errorMessage>
    </validationRules>
</CustomObject>